# framework-api

./: .env  Cargo.toml
src/: lib.rs  main.rs
src/models/: mod.rs
src/models/object/: mod.rs
src/models/object_mapper/: mod.rs
src/models/object_vizualizer/: mod.rs
src/models/plus/: mod.rs
src/models/request/: mod.rs
