[package]
name = "framework-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
ws = { package = "rocket_ws", version = "0.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.37", features = ["serde"] }
dotenvy = "0.15.7"
diesel = { version = "2.1.5", features = ["mysql", "chrono"] }
rocket_cors = "0.6.0"
reqwest = "0.12.3"